Fix home text overlay on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -849,8 +849,8 @@ section {
         padding: 3rem 2rem;
     }
 
-    .home .slide .content h3 {
-        font-size: 10vw;
+    .home .content h3 {
+        font-size: 8vw;
     }
 }
 
